[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["env", "derive"] }
salvo = { version = "0.55.5", features = ["anyhow"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "macros"] }
flat_config = { path = "../../flat_config" }
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
either = { version = "1.9.0", features = ["serde"] }
